--- a/conferences.html
+++ b/conferences.html
@@ -40,16 +40,12 @@
       <table class="nav" cellspacing="2" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
-            <!-- Kept your original td color, though link text is black either way -->
-            <td style="width: 16%; color: #cc0000;"><a
-                href="research.html">RESEARCH</a></td>
-            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br>
-            </td>
-            <td class="active" style="width: 16%;"><a
-                href="conferences.html">CONFERENCES</a></td>
-            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
-            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
+            <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
+            <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
+            <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
+            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td class="active" style="width: 20%;"><a
+                href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
       </table>
@@ -68,6 +64,8 @@
           </li>
           <li>*<a href="https://neuralpolytopes.gitlab.io/workshop2026/">Workshop
 
+
+
               on Polyhedral Geometry for Neural Networks</a>, University
             of Technology Nuremberg, Germany, Mar. 16-20, 2026. <br>
           </li>
@@ -75,6 +73,8 @@
           </li>
           <li>*<a
               href="https://www.ams.org/meetings/sectional/2331_program_saturday.html">Special
+
+
 
 
 
@@ -99,6 +99,8 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
+
+
               Oberseminar Dynamics</a>, Technische Universität München,
             Nov. 3, 2025. <br>
           </li>
@@ -108,6 +110,8 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
           </li>
           <li>*<a
               href="http://www.fields.utoronto.ca/activities/25-26/neuroscience-TDA">Workshop
+
+
 
 
 
@@ -136,6 +140,8 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
+
+
               England Dynamics Seminar</a>, Apr. 11, 2025. <br>
           </li>
           <li>*<a href="https://bostonsymmetry.github.io">Boston
@@ -153,12 +159,16 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
 
 
 
+
+
               Session on Arithmetic Dynamics of Single and Multiple
               Maps, Joint Math Meetings</a>, Seattle, Jan. 8, 2025. <br>
           </li>
           <li class="size-16"> *Minicourse, Applications of Topology to
             Neural Networks, <a
               href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+
+
 
 
 
@@ -186,6 +196,8 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               for Computing Sciences</a>, Institute for Defense
             Analysis, Maryland, May 23, 2024. <br>
           </li>
@@ -199,10 +211,14 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               Rees NY Women and Math Conference</a>, keynote, C.U.N.Y.,
             Mar. 2, 2024.</li>
           <li>*<a
               href="http://userhome.brooklyn.cuny.edu/aulicino/seminar/">Complex
+
+
 
 
 
@@ -229,11 +245,15 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               Semester Program</a>, ICERM, Sep.-Dec. 2023.</li>
           <li>*Open Problems Seminar, ICERM, Nov. 9, 2023.<br>
           </li>
           <li>*<a
               href="https://www.math.brown.edu/reschwar/seminar.html">GeomTop
+
+
 
 
 
@@ -258,6 +278,8 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
+
               Seminar</a>, Boston U., Apr. 3, 2023. <br>
           </li>
           <li><a href="(https://www.oneworldml.org/">*One World Seminar
@@ -269,6 +291,8 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
           </li>
           <li>*<a
               href="https://meetings.ams.org/math/jmm2022/meetingapp.cgi/Session/3490">AMS
+
+
 
 
 
@@ -295,10 +319,14 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
+
                 Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
               7-12, 2024. </li>
             <li><a
 href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
+
+
 
 
 
@@ -321,6 +349,8 @@ href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_pr
 
 
 
+
+
                 Special Session on Dynamics, Geometry, and Group Actions</a>,
               Joint Math. Meetings, Boston, Jan 4-5, 2023. <br>
             </li>
@@ -329,6 +359,8 @@ href="https://www.ams.org/meetings/sectional/2275_program_ss4.html#title"
                 title="special session" target="_blank">AMS Special
                 Session on Geometric Dynamics and Billiards</a>, <a
                 href="https://www.ams.org/meetings/sectional/2275_special.html">AMS
+
+
 
 
 
