--- a/otheracademic.html
+++ b/otheracademic.html
@@ -40,15 +40,11 @@
       <table class="nav" cellspacing="2" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
-            <!-- Kept your original td color, though link text is black either way -->
-            <td style="width: 16%; color: #cc0000;"><a
-                href="research.html">RESEARCH</a></td>
-            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br>
-            </td>
-            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
-            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
-            <td class="active" style="width: 18%;"><a
+            <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
+            <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
+            <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
+            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td class="active" style="width: 20%;"><a
                 href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
@@ -61,6 +57,8 @@
         <ul>
           <li><span style="font-size: larger;"><small>Boston College <a
                   href="https://ianbiringer.net/seminar.html">Geometry/Topology/Dynamics
+
+
 
 
 
@@ -82,6 +80,8 @@
 
 
 
+
+
               Mathematics Research Communities</a>.&nbsp; I benefited
             from participating in two MRC programs as a student.&nbsp; <br>
           </li>
@@ -91,6 +91,8 @@
           </li>
           <li> I organized a year-long series of events about <a
               href="https://www.bc.edu/centers/ila/events/women-in-stem.html">Women
+
+
 
 
 
@@ -122,12 +124,16 @@ href="http://www.math.cornell.edu/%7Emec/2008-2009/KathrynLindsey/PROJECT/homepa
 
 
 
+
+
                 Introduction to Tilings</a></em>. </li>
           <li> Who Wants to Be a Mathematician?&nbsp; I made a <a
               href="https://www.youtube.com/watch?v=NSARpZHPpe8"
               target="_blank">cameo appearance</a> in the 2015 AMS
             production of " <a
               href="http://www.ams.org/programs/students/wwtbam/wwtbam">Who
+
+
 
 
 
@@ -152,6 +158,8 @@ href="http://www.math.cornell.edu/%7Emec/2008-2009/KathrynLindsey/PROJECT/homepa
           <li><a href="https://web.williams.edu/Mathematics/csilva/"
               target="_blank">Cesar Silva</a> (undergrad advisor)</li>
           <li><a href="https://en.wikipedia.org/wiki/William_Thurston">William
+
+
 
 
 
