--- a/teaching.html
+++ b/teaching.html
@@ -43,16 +43,12 @@
       <table class="nav" cellspacing="2" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
-            <!-- Kept your original td color, though link text is black either way -->
-            <td style="width: 16%; color: #cc0000;"><a
-                href="research.html">RESEARCH</a></td>
-            <td class="active" style="width: 16%;"><a
-                href="teaching.html">TEACHING</a><br>
-            </td>
-            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
-            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
-            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
+            <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
+            <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
+            <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
+            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td class="active" style="width: 20%;"><a
+                href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
       </table>
@@ -111,6 +107,8 @@
 
 
 
+
+
               Scholars Program</a>, 9th/10th grades, July 5-14, 2017.</li>
           <li>Math 20500: Analysis in R^n III (accelerated), Spring
             2017. </li>
@@ -135,6 +133,8 @@
         <div>
           <ul>
             <li> <strong style="font-weight: normal;">Summers 2003-2013</strong>:&nbsp;
+
+
 
 
 
