--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
       <table class="nav" cellspacing="2" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
+            <td class="active" style="width: 20%;"><a href="index.html">ABOUT</a></td>
             <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
             <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
             <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
-            <td class="active" style="width: 20%;"><a
-                href="otheracademic.html">OTHER&nbsp;</a></td>
+            <td style="width: 20%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
       </table>
