--- a/teaching.html
+++ b/teaching.html
@@ -45,10 +45,10 @@
           <tr>
             <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
             <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
-            <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
-            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
             <td class="active" style="width: 20%;"><a
-                href="otheracademic.html">OTHER&nbsp;</a></td>
+                href="teaching.html">TEACHING</a></td>
+            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 20%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
       </table>
@@ -109,6 +109,8 @@
 
 
 
+
+
               Scholars Program</a>, 9th/10th grades, July 5-14, 2017.</li>
           <li>Math 20500: Analysis in R^n III (accelerated), Spring
             2017. </li>
@@ -133,6 +135,8 @@
         <div>
           <ul>
             <li> <strong style="font-weight: normal;">Summers 2003-2013</strong>:&nbsp;
+
+
 
 
 
