--- a/conferences.html
+++ b/conferences.html
@@ -43,8 +43,8 @@
             <td style="width: 20%;"><a href="index.html">ABOUT</a></td>
             <td style="width: 20%;"><a href="research.html">RESEARCH</a></td>
             <td style="width: 20%;"><a href="teaching.html">TEACHING</a></td>
-            <td style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
-            <td class="active" style="width: 20%;"><a
+            <td class="active" style="width: 20%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 20%;"><a
                 href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
@@ -101,7 +101,7 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
-              Oberseminar Dynamics</a>, Technische Universität München,
+              Oberseminar Dynamics</a>, Technische UniversitÃ¤t MÃ¼nchen,
             Nov. 3, 2025. <br>
           </li>
           <li>Collaboration on Mathematical and Scientific Foundations
@@ -166,7 +166,7 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
           </li>
           <li class="size-16"> *Minicourse, Applications of Topology to
             Neural Networks, <a
-              href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+              href="https://applied-topology-school.eventos.cimat.mx">CIMAT-MÃ©rida
 
 
 
@@ -177,7 +177,7 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
 
 
 
-              Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
+              Applied Topology School</a>, Unidad MÃ©rida, Mexico, Nov.
             7-12, 2024. <br>
           </li>
           <li>*<a
@@ -310,7 +310,7 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
           <h3>Conference Organization:</h3>
           <ul>
             <li class="size-16"> <a
-                href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+                href="https://applied-topology-school.eventos.cimat.mx">CIMAT-MÃ©rida
 
 
 
@@ -321,7 +321,7 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
-                Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
+                Applied Topology School</a>, Unidad MÃ©rida, Mexico, Nov.
               7-12, 2024. </li>
             <li><a
 href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
